[package]
name = "satsnet-rpc"
version = "0.19.0"
authors = ["Jacky Chen <softwarecheng@gmail.com>"]
license = "CC0-1.0"
homepage = "https://github.com/sat20-labs/rust-satsnet-rpc/"
repository = "https://github.com/sat20-labs/rust-satsnet-rpc/"
description = "RPC client library for the satsnet JSON-RPC API."
keywords = ["crypto", "bitcoin", "satsnet", "rpc"]
edition = "2018"

[lib]
name = "satsnet_rpc"
path = "src/lib.rs"

[features]
default = ["rand"]
rand = ["satsnet-rpc-json/rand"]

[dependencies]
satsnet-rpc-json = { version = "0.19.0", path = "../json" }

log = "0.4.5"
jsonrpc = { version = "0.18.0", features = ["minreq_http"] }

# Used for deserialization of JSON.
serde = "1"
serde_json = "1"

[dev-dependencies]
tempfile = "3.3.0"

[[example]]
name = "retry_client"
