[package]
name = "satsnet-rpc-json"
version = "0.19.0"
authors = ["Jacky Chen <softwarecheng@gmail.com>"]
license = "CC0-1.0"
homepage = "https://github.com/sat20-labs/rust-satsnet-rpc/"
repository = "https://github.com/sat20-labs/rust-satsnet-rpc/"
description = "JSON-enabled type structs for satsnet-rpc crate."
keywords = ["crypto", "bitcoin", "satsnet", "rpc"]
edition = "2021"
rust-version = "1.56.1"

[lib]
name = "satsnet_rpc_json"
path = "src/lib.rs"

[features]
default = ["rand"]
rand = ["satsnet/rand-std"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

satsnet = { version = "0.32.1", features = ["serde"] }
